workspace = { members = ["pda"] }
[package]
name = "account_data"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "account_data"
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = ">=0.9, <0.11"
solana-program = "=1.17.27"
